feat(controller): Ajuste exposição do external-id

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -7,6 +7,7 @@
        <MicrosoftEntityFrameworkCore>7.0.16</MicrosoftEntityFrameworkCore>
        <AutoMapper>13.0.1</AutoMapper>
        <NpgsqlEntityFrameworkCorePostgreSQL>7.0.11</NpgsqlEntityFrameworkCorePostgreSQL>
+        <SwashbuckleAspNetCore>6.5.0</SwashbuckleAspNetCore>
     </PropertyGroup>
 </Project>
 
